feat(<CameraCapture />): created component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,6 @@
 @import 'components/balls.scss';
 @import './components/button.scss';
 @import './components/input.scss';
+@import './components/form.scss';
+@import './components/CameraCapture.scss';
+@import './components/photoDisplay.scss';
