--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,8 +12,9 @@
     height: 100%;
     font-size: 1.6rem;
     color: $blue;
+    background: #0c192c;
     font-family: $ubuntu, Arial, Helvetica, sans-serif;
-    background-color: #cccc;
+    overflow: hidden;
   }
 
   ul,
