--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -23,10 +23,18 @@
 
   .focus_label {
     top: -5%;
+
+    @media (max-width: 550px) {
+      font-size: 1rem;
+    }
   }
 
   .blur_label {
     top: 50%;
     transform: translateY(-50%);
+
+    @media (max-width: 550px) {
+      font-size: 1rem;
+    }
   }
 }
