feat(<Form />): addinf component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @import './components/form.scss';
 @import './components/CameraCapture.scss';
 @import './components/photoDisplay.scss';
+@import './components/Checkbox.scss';
