feat(<Loading />): created component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,5 @@
 @import './components/CameraCapture.scss';
 @import './components/photoDisplay.scss';
 @import './components/Checkbox.scss';
+@import './components/message.scss';
+@import './components/loading.scss';
