--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,8 @@ $interativa_primiryColor: #e7411b;
 $interativa_segundaryColor: #f27405;
 $interativa_thirdColor: #f25c05;
 $interativa_fourthColor: #f2f2f2;
+$success: #12c99b;
+$error: #e41749;
 
 $small: 1.6rem;
 $extra_small: 3.2rem;
