--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -8,7 +8,7 @@
     top: 30%;
     left: 1%;
     transition: all 300ms ease-in-out;
-    text-transform: uppercase;
+    text-transform: capitalize;
   }
 
   input {
@@ -23,6 +23,7 @@
 
   .focus_label {
     top: -5%;
+    font-size: 1rem;
 
     @media (max-width: 550px) {
       font-size: 1rem;
