feat: adding button singOut and ajusting manisfest

--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -44,4 +44,27 @@
       border: 0.1rem solid transparent;
     }
   }
+
+  .conteiner-button-close {
+    position: fixed;
+    top: 7%;
+    right: 10%;
+    display: flex;
+    gap: 1.6rem;
+
+    button {
+      padding: 1rem;
+      background-color: $blue;
+      color: $white;
+      border: none;
+      transition: all 300ms ease-in-out;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: $interativa_primiryColor;
+      color: $white;
+      border: 0.1rem solid transparent;
+    }
+  }
 }
