refactory: ajutign css

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,12 +3,12 @@
 
 @import './template/home.scss';
 
-@import 'components/balls.scss';
+@import './components/message.scss';
+@import './components/balls.scss';
 @import './components/button.scss';
 @import './components/input.scss';
 @import './components/form.scss';
 @import './components/CameraCapture.scss';
 @import './components/photoDisplay.scss';
 @import './components/Checkbox.scss';
-@import './components/message.scss';
 @import './components/loading.scss';
