--- a/src/styles/components/CameraCapture.scss
+++ b/src/styles/components/CameraCapture.scss
@@ -12,6 +12,10 @@
   z-index: 1;
   animation: show 0.5s ease-in-out;
 
+  .message {
+    top: 0;
+  }
+
   @keyframes show {
     0% {
       transform: translateX(-100%);
