feat: adding menuBar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,4 @@
 @import './components/photoDisplay.scss';
 @import './components/Checkbox.scss';
 @import './components/loading.scss';
+@import './components/menuBar.scss';
